# ChangeLog for dev-ruby/sprockets-rails
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sprockets-rails/ChangeLog,v 1.12 2015/05/08 05:29:19 graaff Exp $

*sprockets-rails-2.3.0 (08 May 2015)

  08 May 2015; Hans de Graaff <graaff@gentoo.org>
  +sprockets-rails-2.3.0.ebuild:
  Version bump.

*sprockets-rails-2.2.4 (24 Jan 2015)

  24 Jan 2015; Hans de Graaff <graaff@gentoo.org>
  +sprockets-rails-2.2.4.ebuild:
  Version bump.

*sprockets-rails-2.2.2 (22 Dec 2014)

  22 Dec 2014; Hans de Graaff <graaff@gentoo.org>
  +sprockets-rails-2.2.2.ebuild:
  Version bump.

*sprockets-rails-2.2.0 (17 Nov 2014)

  17 Nov 2014; Hans de Graaff <graaff@gentoo.org>
  +sprockets-rails-2.2.0.ebuild:
  Version bump.

  04 Sep 2014; Hans de Graaff <graaff@gentoo.org>
  -sprockets-rails-2.1.1.ebuild:
  Cleanup.

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> sprockets-rails-2.0.0.ebuild,
  sprockets-rails-2.1.1.ebuild, sprockets-rails-2.1.3.ebuild:
  Remove trailing '.' from DESCRIPTION.

*sprockets-rails-2.1.3 (29 May 2014)

  29 May 2014; Hans de Graaff <graaff@gentoo.org>
  +sprockets-rails-2.1.3.ebuild:
  Version bump.

  21 Apr 2014; Hans de Graaff <graaff@gentoo.org> sprockets-rails-2.0.0.ebuild:
  Add ruby20, ruby21.

*sprockets-rails-2.1.1 (11 Apr 2014)

  11 Apr 2014; Hans de Graaff <graaff@gentoo.org>
  +sprockets-rails-2.1.1.ebuild:
  Version bump.

  11 Mar 2014; Johannes Huber <johu@gentoo.org> sprockets-rails-2.0.0.ebuild:
  ~x86 added, bug #487206

  13 Oct 2013; Markus Meier <maekke@gentoo.org> sprockets-rails-2.0.0.ebuild:
  add ~arm, bug #487206

*sprockets-rails-2.0.0 (07 Oct 2013)

  07 Oct 2013; Hans de Graaff <graaff@gentoo.org>
  +sprockets-rails-2.0.0.ebuild, +metadata.xml:
  Initial import for Rails 4.