@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=test? ( ruby_targets_ruby19? ( >=dev-ruby/actionpack-3.0[ruby_targets_ruby19] >=dev-ruby/activesupport-3.0[ruby_targets_ruby19] >=dev-ruby/sprockets-2.8:2[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/actionpack-3.0[ruby_targets_ruby20] >=dev-ruby/activesupport-3.0[ruby_targets_ruby20] >=dev-ruby/sprockets-2.8:2[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/actionpack-3.0[ruby_targets_ruby21] >=dev-ruby/activesupport-3.0[ruby_targets_ruby21] >=dev-ruby/sprockets-2.8:2[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( test? ( >=dev-ruby/actionpack-4[ruby_targets_ruby19] >=dev-ruby/railties-4[ruby_targets_ruby19] dev-ruby/test-unit:2[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( >=dev-ruby/actionpack-4[ruby_targets_ruby20] >=dev-ruby/railties-4[ruby_targets_ruby20] dev-ruby/test-unit:2[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( >=dev-ruby/actionpack-4[ruby_targets_ruby21] >=dev-ruby/railties-4[ruby_targets_ruby21] dev-ruby/test-unit:2[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
-DESCRIPTION=Sprockets implementation for Rails 4.x (and beyond) Asset Pipeline
-EAPI=5
-HOMEPAGE=https://github.com/rails/sprockets-rails
-IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 test test
-KEYWORDS=~amd64 ~arm ~x86
-LICENSE=MIT
-RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/actionpack-3.0[ruby_targets_ruby19] >=dev-ruby/activesupport-3.0[ruby_targets_ruby19] >=dev-ruby/sprockets-2.8:2[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/actionpack-3.0[ruby_targets_ruby20] >=dev-ruby/activesupport-3.0[ruby_targets_ruby20] >=dev-ruby/sprockets-2.8:2[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/actionpack-3.0[ruby_targets_ruby21] >=dev-ruby/activesupport-3.0[ruby_targets_ruby21] >=dev-ruby/sprockets-2.8:2[ruby_targets_ruby21] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] )
-REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
-SLOT=2.2
-SRC_URI=https://github.com/rails/sprockets-rails/archive/v2.2.0.tar.gz -> sprockets-rails-2.2.0.tar.gz
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-utils-2	4241a8d9ed765c83041b38ac128505cd	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=425555404a9dbd7969056ea16563a916
