@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/sprockets-rails
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sprockets-rails/ChangeLog,v 1.12 2015/05/08 05:29:19 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sprockets-rails/ChangeLog,v 1.13 2015/05/08 05:32:43 graaff Exp $
+
+  08 May 2015; Hans de Graaff <graaff@gentoo.org>
+  -sprockets-rails-2.2.0.ebuild, -sprockets-rails-2.2.2.ebuild:
+  Cleanup.
 
 *sprockets-rails-2.3.0 (08 May 2015)
 
